# group-project-team-1

./: .gitignore  For and while.ipynb  LICENSE  calculate_distance_np.ipynb  for_and_while_nash.ipynb  lj-part1-jessica.ipynb  mc-complete.ipynb  numpy_arrays_nash.ipynb  pi-calculation-mc-np-nash.ipynb  pi-calculation-mc.ipynb  rdf-frame-compare.ipynb  total-energy-calc.ipynb
homework/day_2/: README.md
mc-package/: README.md  pyproject.toml
mc-package/mcsim/: __init__.py  monte_carlo.py
mc-package/mcsim/tests/: test_psl.py
