[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcsim"
version = "0.0.1"
authors = [
  { name="Jessica A. Nash", email="janash@vt.edu" },
  { name="Benjamin P. Pritchard", email="bpp4@vt.edu"}
]
description = "A package to do MC simulation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"